i don't remember what I did

--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -13,6 +13,6 @@ body {
 .TicTacToeContainer {
   display: flex;
   justify-content: center;
-  margin-top: 10vh;
+  transform: translateY(10vh);
   /* width: 100px; */
 }
